<resources>
    <string name="app_name">AndClock</string>
    <string name="app_name2">Android</string>


    <string name="action_google">Google</string>
    <string name="action_shuaxin">刷新</string>
    <string name="action_zhuru">注入</string>

    <string name="lottery_date">开奖日期　　：%1s</string>
    <string name="award_deadline">兑奖截止日期：%1s</string>
    <string name="periods">第 %1s 期</string>
    <string name="sales_quantity">本期销量：%1s元（%2s注）</string>
    <string name="jackpot">奖池滚存：%1s元</string>
    <string name="front_result">上一期</string>

    <string name="TextureViewDemo">TextureView Demo</string>
    <string name="camera_activity">Camera</string>
    <string name="gltriangle_activity">GL Triangle</string>
    <string name="canvas_activity">Canvas Activity</string>

    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="increase_alpha">Increase Alpha</string>
    <string name="decrease_alpha">Decrease Alpha</string>
    <string name="list_activity">TextureView Demo</string>

    <string name="ycuwq_datepicker_cancel">取消</string>
    <string name="ycuwq_datepicker_decide">确认</string>
    <string name="ycuwq_datepicker_hour">时</string>
    <string name="ycuwq_datepicker_minute">分</string>

    <string name="schulte_grid_rule_text">数完25个数字所用时间越短，注意力水平越高。\n\t5&#8212;7岁年龄组：达到30秒以下为优秀，46秒属于中等水平，班级排名会在中游或偏下，55秒则问题较大。\n\t7&#8212;12岁年龄组：能达到20秒以下为优秀，学习成绩应是名列前茅，36秒属于中等水平，班级排名会在中游或偏下，45秒则问题较大，考试会出现不及格现象。\n\t12&#8212;14岁年龄组：能达到16秒以下为优秀，学习成绩应是名列前茅，26秒属于中等水平，班级排名会在中游或偏下，36秒则问题较大，考试会出现不及格现象。\n\t18岁及以上成年人：最好可达到8秒的水平，20秒为中等水平。\n顺便说一句，想买车的朋友，如果你的注意力水平达不到20秒，请您在学习和考取驾驶执照前，先把注意力练好！否则，上路之后，肯定是个"马路杀手"。</string>
    <string name="title_activity_apkinstall">APKInstallActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
</resources>
