<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rotate_left"
        android:icon="@drawable/navigation_previous_item"
        android:title="@string/rotate_left"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/rotate_right"
        android:icon="@drawable/navigation_next_item"
        android:title="@string/rotate_right"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/increase_alpha"
        android:icon="@drawable/navigation_collapse"
        android:title="@string/increase_alpha"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/decrease_alpha"
        android:icon="@drawable/navigation_expand"
        android:title="@string/decrease_alpha"
        app:showAsAction="ifRoom"/>

</menu>