<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="cn.smiles.andclock.activity.LotteryInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tv_lottery_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/lottery_date"
                android:textColor="#333333"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_award_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="3dp"
                android:text="@string/award_deadline"
                android:textColor="#333333"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_periods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/periods"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_red_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_red_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_red_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_red_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_red_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_red_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_blue_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/blue_ring_bg_shape"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E9F3FE"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="奖项"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="中奖注数"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="单注奖金（元）"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="一等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_first_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_first_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="二等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_second_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_second_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="三等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_third_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_third_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="四等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_fourth_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_fourth_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="五等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_fifth_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_fifth_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="六等奖"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_six_prize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_six_bonus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#333333"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ADD3EF"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_sales_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/sales_quantity"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_jackpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/jackpot"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_ssq_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:padding="16dp"
        android:text="玩法规则"/>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/iv_ssq_rule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"/>
</FrameLayout>